# mujoco-quadruped

./: .gitignore  MIGRATION_GUIDE.md  debug_training_render.py  fixed_render_example.py  minimal_train_test.py  pyproject.toml  quick_render_test.py  test_mujoco_render.py  test_rgb_only.py  ubuntu_render_setup.md
basic_working/: config.py  main.py  robot_model.py  scene.xml
joint_control/: keyboard_controller.py
rl/: README.md  RESEARCH_REPORT.md  debug_episode_termination.py  demo.py  environment.py  go2_scene.xml  gpu_max_train.py  gpu_optimized_train.sh  improved_environment.py  improved_train.py  multi_robot_env.py  ppo_agent.py  rtx4080_max.sh  run_basic_training.py  run_gpu_training.py  run_improved_training.py  run_tests.py  simple_multi_env.py  simple_vectorized.py  test_gait.py  test_gpu_optimization.py  test_mesh_loading.py  train.py  vectorized_env.py
rl/agents/: ppo_agent.py
rl/assets/: go2_scene.xml
rl/documentation/: README.md
rl/environments/: README.md
rl/environments/aggressive/: __init__.py
rl/environments/basic/: environment.py
rl/environments/improved/: improved_environment.py
rl/environments/integrated/: __init__.py  (+1 more)
rl/generation1/: README.md
rl/generation2/: README.md
rl/generation3/: README.md
rl/generation4/: README.md
rl/generation5/: README.md
rl/generation_final/: README.md  quick_demo.py  test_integrated_env.py
rl/models/: best_go2_ppo.pth  go2_ppo_episode_100.pth  go2_ppo_episode_200.pth
rl_organized/: README.md  __init__.py  run_basic_training.py  run_improved_training.py
rl_organized/training/: README.md
(+41 files in other folders)
